apps/dcos/templates/route.yaml
apiVersion: v1
kind: Service
metadata:
  name: dcos
  namespace: dcos
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8931
      targetPort: 8931
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: dcos
  namespace: dcos
  labels:
    kubernetes.io/service-name: dcos
    endpointslice.kubernetes.io/managed-by: helm
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8931
endpoints:
  - addresses:
      - 192.168.2.188
    conditions:
      ready: true
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dcos
  namespace: dcos
spec:
  hostnames:
    - dcos.serverton.de
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dcos
          port: 8931
